Fix: re-center navbar brand on mobile with notifications button

--- a/src-ui/src/app/components/app-frame/app-frame.component.scss
+++ b/src-ui/src/app/components/app-frame/app-frame.component.scss
@@ -244,6 +244,13 @@ main {
   }
 }
 
+@media screen and (max-width: 768px) {
+  .navbar-toggler {
+    // compensate for 2 buttons on the right
+    margin-right: 45px;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .navbar-brand.slim {
     max-width: 50px;
